# KyroQL

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
benches/: phase2.rs
docs/: ARCHITECTURE.md  DATA_MODEL.md
proto/: kyroql.proto
src/: belief.rs  confidence.rs  conflict.rs  embedding.rs  engine.rs  entity.rs  error.rs  frame.rs  lib.rs  meta.rs  pattern.rs  schema.rs  source.rs  time.rs  trust.rs  value.rs
src/belief/: belief.rs  confidence.rs  mod.rs  source.rs  store.rs  time.rs
src/conflict/: detector.rs  mod.rs  store.rs  types.rs
src/derivation/: mod.rs
src/engine/: mod.rs  runtime.rs  write_path.rs
src/entity/: entity.rs  mod.rs  resolution.rs  store.rs  versioning.rs
src/inference/: mod.rs  policies.rs  resolver.rs
src/ir/: consistency.rs  mod.rs  operations.rs  serialization.rs  validation.rs
src/monitor/: dispatcher.rs  matcher.rs  mod.rs  stream.rs  triggers.rs
src/operations/: assert_builder.rs  assert_op.rs  belief_frame.rs  derive.rs  derive_builder.rs  mod.rs  resolve.rs  resolve_builder.rs  resolve_op.rs  simulate.rs  simulate_builder.rs
src/simulation/: constraints.rs  context.rs  delta_index.rs  delta_store.rs  mod.rs
src/storage/: memory.rs  mod.rs  traits.rs
src/storage/persistent/: codec.rs  file_lock.rs  mod.rs  segment.rs  stores.rs  wal.rs
src/transport/: mod.rs
tests/: alloc_reflex.rs  derive_e2e.rs  monitor_e2e.rs  perf_targets.rs  persistent_crash.rs  simulate_e2e.rs
