[package]
name = "kyroql"
version = "0.1.0"
edition = "2021"
authors = ["KyroDB Team <kishan@kyrodb.com>"]
license = "BSL-1.1"
description = "The Cognitive Protocol for Superintelligence - A belief synchronization protocol for AI agents"
repository = "https://github.com/KyroDB/KyroQL"
keywords = ["ai", "agents", "memory", "database", "cognitive"]
categories = ["database", "science"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUIDs
uuid = { version = "1.0", features = ["serde", "v4", "v5"] }

# Stable hashing
blake3 = "1.5"

# Pattern evaluation
regex = "1.11"

# Error handling
thiserror = "1.0"

[dev-dependencies]
# Testing
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }

[features]
default = []

[lib]
name = "kyroql"
path = "src/lib.rs"
